--- a/R/analysis.Rmd
+++ b/R/analysis.Rmd
@@ -18,6 +18,33 @@ library(mrautomatr)
 
 # WAVE 1 (PILOT)
 ## Students
+```{r}
+# correlation function
+corstarsl <- function(x){ 
+require(Hmisc)
+x <- as.matrix(x)
+R <- rcorr(x)$r
+p <- rcorr(x)$P
+## define notions for significance levels; spacing is important.
+mystars <- ifelse(p < .001, "***", ifelse(p < .01, "**", ifelse(p < .05, "*", "")))
+## trunctuate the matrix that holds the correlations to two decimal 
+R <- format(round(cbind(rep(-1.11, ncol(x)), R), 2))[,-1]
+## build a new matrix that includes the correlations with their appropriate stars 
+Rnew <- matrix(paste(R, mystars, sep=""), ncol=ncol(x))
+diag(Rnew) <- paste(diag(R), " ", sep="")
+rownames(Rnew) <- colnames(x)
+colnames(Rnew) <- paste(colnames(x), "", sep="")
+## remove upper triangle
+Rnew <- as.matrix(Rnew) 
+Rnew[upper.tri(Rnew, diag = TRUE)] <- "--"
+Rnew[upper.tri(Rnew)] <- ""
+Rnew <- as.data.frame(Rnew)
+## remove last column and return the matrix (which is now a data frame) 
+Rnew <- cbind(Rnew[1:length(Rnew)])
+return(Rnew)
+}
+```
+
 
 ```{r}
 nrow(dat_stu_b)
@@ -25,6 +52,21 @@ table(dat_stu_b$age)
 prop.table(table(dat_stu_b$gender))
 table(dat_stu_b$grade)
 table(dat_stu_b$country)
+
+dat_stu_b <- dat_stu_b |> 
+  mutate(
+    dass_depression = rowMeans(across(c(dass3_1, dass5_1, dass10_1, dass13_1, dass16_1, dass17_1, dass21_1)), na.rm = TRUE),
+    dass_anxiety = rowMeans(across(c(dass2_1, dass4_1, dass7_1, dass9_1, dass15_1, dass19_1, dass20_1)), na.rm = TRUE),
+    dass_stress = rowMeans(across(c(dass1_1, dass6_1, dass8_1, dass11_1, dass12_1, dass14_1, dass18_1)), na.rm = TRUE),
+    phq_all = rowMeans(across(phq1_1:phq8_1), na.rm = TRUE),
+    gad_all = rowMeans(across(gad1_1:gad7_1), na.rm = TRUE),
+    ghq_all = rowMeans(cbind(
+      across(c(ghq1_1, ghq3_1, ghq4_1, ghq7_1, ghq8_1, ghq12_1), ~ 3 - .x), # Reverse code positive items
+      across(c(ghq2_1, ghq5_1, ghq6_1, ghq9_1, ghq10_1, ghq11_1))
+    ), na.rm = TRUE)
+  )
+
+corstarsl(dat_stu_b |> select(dass_depression, dass_anxiety, dass_stress, phq_all, gad_all, ghq_all)) |> View()
 ```
 
 ### DASS Time 1
